# candle

./: Cargo.toml
candle-core/: Cargo.toml
candle-core/examples/: wgpu_basics.rs
candle-core/src/: device.rs  display.rs  error.rs  lib.rs  op.rs  storage.rs  tensor.rs  wgpu_backend.rs
candle-pyo3/src/: lib.rs
candle-shaders/: Cargo.toml  build.rs
candle-shaders/src/: add.glsl  lib.rs
candle-shaders/src/templates/: unary.wgsl
