[package]
name = "candle-shaders"
version = "0.1.3"
edition = "2021"

description = "WGPU Shaders for Candle"
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]

[build-dependencies]
naga = { version = "0.13.0", features = ["wgsl-in", "spv-out"]}
shaderc = "0.8.2"
glob = "0.3.1"
rayon = "1.7.0"
bytemuck = { workspace = true }
text_placeholder = "0.5.0"
